Renamed the property prefix.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-producer.exchange = bare-metal-producer
-producer.queue = bare-metal-consumer
-producer.routingKey = bare-metal-routing-key
+consumer.exchange = bare-metal-producer
+consumer.queue = bare-metal-consumer
+consumer.routingKey = bare-metal-routing-key
 
