--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ consumer.exchange = bare-metal-producer
 consumer.queue = bare-metal-consumer
 consumer.routingKey = bare-metal-routing-key
 
+spring.rabbitmq.listener.concurrency=1
+spring.rabbitmq.listener.max-concurrency=1
+spring.rabbitmq.listener.prefetch=1
