Specify connection settings.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,14 @@ consumer.exchange = bare-metal-producer
 consumer.queue = bare-metal-consumer
 consumer.routingKey = bare-metal-routing-key
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.ssl.enabled=false
+
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
+
 spring.rabbitmq.listener.concurrency=1
 spring.rabbitmq.listener.max-concurrency=1
-spring.rabbitmq.listener.prefetch=100
+spring.rabbitmq.listener.prefetch=1
