Make the mod value configurable.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 consumer.exchange = bare-metal-producer
 consumer.queue = bare-metal-consumer
 consumer.routingKey = bare-metal-routing-key
+consumer.modvalue = 2000
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
