--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.rabbitmq.ssl.enabled=false
 spring.rabbitmq.password=guest
 spring.rabbitmq.username=guest
 
+# these values should match
 spring.rabbitmq.listener.concurrency=1
 spring.rabbitmq.listener.max-concurrency=1
+spring.rabbitmq.cache.channel.size=1
+
+# these values should match
 spring.rabbitmq.listener.prefetch=1
+spring.rabbitmq.listener.transaction-size=1
